fix: change sidebars' position to fix and remove overflow

--- a/src/components/InfoSidebar/index.module.css
+++ b/src/components/InfoSidebar/index.module.css
@@ -1,5 +1,5 @@
 .sidebar {
-  position: absolute;
+  position: fixed;
   right: 0;
   height: 100%;
   width: 20%;
