--- a/src/components/ProjectSidebar/index.module.css
+++ b/src/components/ProjectSidebar/index.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   width: 15%;
   background-color: #e0e0e0;
-  position: absolute;
+  position: fixed;
 }
 
 .sidebarLink {
